# pixelize

./: README.md  pyproject.toml  result.txt
pixelize/: __init__.py  module.py
tests/: camera.py  sample.py
